# smart-dispatch-rules

./: .cursorrules  .env.example  .env.playwright  .gitignore  .npmrc  AGENTS.md  DEPLOY.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  LOCAL_DEV.md  QUICKSTART.md  README.md  TEST_CASES.md  TEST_COVERAGE_REPORT.md  TEST_RESULTS.md  TODO.md  bug_list.md  check-user.ts  deploy.sh  docker-compose.yml  logs_result.csv  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  render-docker.yaml  render.yaml  run-all-tests.sh  run-tests.sh  test_api.py  test_login.py  todo.md  vercel.json
apps/api/: .env.example  .env.test  Cargo.toml  Dockerfile  jest.config.js  package.json  tsconfig.json  vercel.json
apps/api/api/: health.js  index.js  serverless-wrapper.js  test.js
apps/api/entity/: Cargo.toml
apps/api/entity/src/: condition_templates.rs  dispatch_statistics.rs  lib.rs  login_logs.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  rule_actions.rs  rule_conditions.rs  rule_versions.rs  rules.rs  system_logs.rs  users.rs
apps/api/prisma/: schema.prisma  seed.js.map
apps/api/src/: app.module.ts  main.rs  main.ts  serverless.ts
apps/api/src/db/: mod.rs
apps/api/src/handlers/: auth.rs  dashboard.rs  health.rs  logs.rs  mod.rs  roles.rs  rules.rs  templates.rs  users.rs
apps/api/src/i18n/: i18n.module.ts
apps/api/src/middleware/: auth.rs  mod.rs
apps/api/src/models/: dashboard.rs  log.rs  mod.rs  permission.rs  role.rs  rule.rs  user.rs
apps/api/src/routes/: auth.rs  dashboard.rs  logs.rs  mod.rs  roles.rs  rules.rs  templates.rs  users.rs
apps/api/src/services/: auth_service.rs  dashboard_service.rs  log_service.rs  mod.rs  (+3 more)
apps/api/test/: setup.ts
(+270 files in other folders)
