[package]
name = "entity"
version = "1.0.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid", "with-chrono", "with-json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
rust_decimal = { version = "1.35", features = ["serde"] }

[lib]
name = "entity"
path = "src/lib.rs"
